# MCP

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
data/: guardrails.txt
src/: app.py  streamlit_app.py
src/agents/: approval_agent.py  brief_agent.py  content_agent.py
src/utils/: guardrails.py
templates/: guardrails.html  index.html  result.html
